typefinding: add typefinder for WAP WBMP bitmaps

https://bugzilla.gnome.org/show_bug.cgi?id=651294